# server-backend

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  database.db
.github/: pre-build.sh
.github/workflows/: cargo-compile.yaml  clippy.yaml  release.yaml
dev-scripts/: unix-setup.sh  windows-setup.ps1
src/: db.rs  lib.rs  passwords.rs  server.rs
src/db/: manager.rs  mod.rs
src/db/models/: mod.rs  stock.rs  stock_wallet.rs  user.rs  wallet.rs
src/db/schemas/: stock.rs  user.rs
src/http/: dependencies.rs  mod.rs  server.rs
src/server/: dependencies.rs  server.rs
src/services/: auth.rs  mod.rs  trading.rs
src/session/: manager.rs
src/trading/: backend.rs  market.rs  mod.rs
src/trading/models/: market_order.rs  mod.rs  user.rs
